scripts/nullaway/wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8.txt
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/client/Socket.java:192: error: [NullAway] dereferenced expression args is @Nullable
                List<Object> _args = new ArrayList<Object>(args.length + 1);
                                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/client/Socket.java:448: error: [NullAway] dereferenced expression array is @Nullable
        int length = array.length();
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/emitter/Emitter.java:122: error: [NullAway] passing @Nullable parameter 'args' where @NonNull is required
                fn.call(args);
                        ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/client/Manager.java:158: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.uri = uri;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/client/Manager.java:496: error: [NullAway] parameter err is @NonNull, but parameter in superclass method com.github.nkzawa.socketio.client.Manager.OpenCallback.call(@org.checkerframework.checker.initialization.qual.Initialized,@org.checkerframework.checker.nullness.qual.Nullable java.lang.Exception) is @Nullable
                                public void call(Exception err) {
                                                           ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/client/On.java:14: error: [NullAway] dereferenced expression obj is @Nullable
        obj.on(ev, fn);
           ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/client/Socket.java:205: error: [NullAway] dereferenced expression opts is @Nullable
        if (opts.host != null) {
                ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/client/Socket.java:473: error: [NullAway] dereferenced expression packet is @Nullable
            logger.fine(String.format("socket received: type '%s', data '%s'", packet.type, packet.data));
                                                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/parser/Parser.java:88: error: [NullAway] dereferenced expression obj is @Nullable
            str.append(obj.type);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/parser/Parser.java:146: error: [NullAway] dereferenced expression this.reconstructor.reconPack is @Nullable
                if (this.reconstructor.reconPack.attachments == 0) {
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/socketio/parser/Parser.java:254: error: [NullAway] dereferenced expression this.reconPack is @Nullable
            if (this.buffers.size() == this.reconPack.attachments) {
                                                     ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/parser/Packet.java:28: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        this(type, null);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/parser/Packet.java:33: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.type = type;
                  ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/parser/Parser.java:65: error: [NullAway] dereferenced expression packets.get(packet.type) is @Nullable
        resultArray[0] = packets.get(packet.type).byteValue();
                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/client/transports/PollingXHR.java:203: error: [NullAway] dereferenced expression xhr is @Nullable
                            xhr.setFixedLengthStreamingMode(self.data.length);
                               ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/engineio/client/transports/PollingXHR.java:209: error: [NullAway] dereferenced expression xhr is @Nullable
                        for (String key : xhr.getHeaderFields().keySet()) {
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url6a9f553762_Bresiu_socket_io_tgz-pJ8-MainJ8/src/com/github/nkzawa/hasbinarydata/HasBinaryData.java:37: error: [NullAway] passing @Nullable parameter 'v' where @NonNull is required
                if (recursiveCheckForBinary(v)) {
                                            ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
17 errors
